fix: correct dark mode text colors

--- a/priv/public/main.css
+++ b/priv/public/main.css
@@ -30,6 +30,7 @@ main {
   justify-content: center;
   margin: 100px;
   position: relative;
+  color: var(--dark);
 }
 
 main[data-vote]:after {
@@ -84,6 +85,7 @@ body {
 
 .vote_card {
   position: relative;
+  color: var(--black);
   z-index: 1;
   border-radius: 8px;
   text-align: center;
@@ -103,6 +105,7 @@ body {
 
 #room_button::before {
 	content: "Create a room to start:";
+  color: var(--dark);
 	font-size: 16px;
 	position: absolute;
 	top: -28px;
